ALL UI DESIGN DONE

--- a/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
@@ -42,14 +42,14 @@
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
             <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Source="/Assets/fakeLOGO.png"></Image>
-            <TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom">Log in as bunny_gg@hotmail.com</TextBlock>
+            <!--<TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom">Log in as bunny_gg@hotmail.com</TextBlock>-->
             <TextBlock VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">EMAIL</TextBlock>
             <TextBlock VerticalAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">PASSWORD</TextBlock>
-            <TextBox  VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" ></TextBox>
+            <TextBox VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" ></TextBox>
             <PasswordBox  VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2"  Canvas.ZIndex="1" ></PasswordBox>
             <Button VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="LOGINBUTTON" Click="LOGINBUTTON_Click">Login</Button>
-            <HyperlinkButton HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0" Margin="0,0,10,0">Press Here</HyperlinkButton>
-            <TextBlock  Grid.Row="7" Grid.Column="1" VerticalAlignment="Center">if not bunny_gg@hotmail.com</TextBlock>
+            <!--<HyperlinkButton HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0" Margin="0,0,10,0">Press Here</HyperlinkButton>
+            <TextBlock  Grid.Row="7" Grid.Column="1" VerticalAlignment="Center">if not bunny_gg@hotmail.com</TextBlock>-->
         </Grid>
     </Grid>
 
