--- a/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
@@ -1,4 +1,4 @@
-﻿<phone:PhoneApplicationPage
+﻿<phone:PhoneApplicationPage xmlns:Controls="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone.Controls.Toolkit" 
     x:Class="GPSWithFriends.LoginPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -30,27 +30,25 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="3*"/>
                 <RowDefinition Height="0.5*"/>
-                <RowDefinition Height="0.5*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="0.5*"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1*"/>
                 <ColumnDefinition Width="2*"/>
             </Grid.ColumnDefinitions>
-            <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Source="/Assets/fakeLOGO.png"></Image>
+            <Image Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Source="/Assets/logo_300.png"></Image>
             <!--<TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom">Log in as bunny_gg@hotmail.com</TextBlock>-->
-            <TextBlock VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">EMAIL</TextBlock>
-            <TextBlock VerticalAlignment="Center" Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">PASSWORD</TextBlock>
-            <TextBox VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" ></TextBox>
-            <PasswordBox  VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2"  Canvas.ZIndex="1" ></PasswordBox>
-            <Button VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="LOGINBUTTON" Click="LOGINBUTTON_Click">Login</Button>
-            <Button VerticalAlignment="Center" Grid.Row="6" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="REGISTERBUTTON" Click="REGISTERBUTTON_Click">Login</Button>
+            <TextBlock VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">EMAIL</TextBlock>
+            <TextBlock VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">PASSWORD</TextBlock>
+            <TextBox VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginUsernameTextBox" InputScope="EmailSmtpAddress" ></TextBox>
+            <PasswordBox  VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginPasswordBox" Loaded="LoginPasswordBox_Loaded" ></PasswordBox>
+            <Button VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="LOGINBUTTON" Click="LOGINBUTTON_Click">Login</Button>
+            <HyperlinkButton VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="REGISTERBUTTON" Click="REGISTERBUTTON_Click">Register</HyperlinkButton>
             <!--<HyperlinkButton HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0" Margin="0,0,10,0">Press Here</HyperlinkButton>
-            <TextBlock  Grid.Row="7" Grid.Column="1" VerticalAlignment="Center">if not bunny_gg@hotmail.com</TextBlock>-->
+            <TextBlock  Grid.Row="7" Grid.Column="1" VerticalAlignment="Center">if not bunny_gg@hotmail.com</TextBlock>-->      
         </Grid>
     </Grid>
 
