--- a/WP8Client/GPSWithFriends/GPSWithFriends/App.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/App.xaml
@@ -3,11 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
-    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone">
+    xmlns:shell="clr-namespace:Microsoft.Phone.Shell;assembly=Microsoft.Phone"
+    xmlns:con="clr-namespace:GPSWithFriends"
+    >
 
     <!--Application Resources-->
     <Application.Resources>
         <local:LocalizedStrings xmlns:local="clr-namespace:GPSWithFriends" x:Key="LocalizedStrings"/>
+        <con:InverseBooleanConverter x:Key="converter"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
