--- a/WP8Client/GPSWithFriends/GPSWithFriends/SampleData/MainViewModelSampleData.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/SampleData/MainViewModelSampleData.xaml
@@ -2,10 +2,10 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="clr-namespace:GPSWithFriends.ViewModels"
-    SampleProperty="Sample Text Property Value">
+    >
 
     <vm:MainViewModel.Friends>
-        <vm:Friend NickName = "Joshua" Status = "UO, 30 seconds ago" Distance = "7287 km" ImagePath="/Assets/fakePor.png" Email="Jushua@gmail.com"/>
+        <vm:Friend NickName = "JEEoshua" Status = "UO, 30 seconds ago" Distance = "7287 km" ImagePath="/Assets/fakePor.png" Email="Jushua@gmail.com"/>
         <vm:Friend NickName = "Kate" Status = "Beijing, 20 minutes ago" Distance = "1 km" ImagePath="/Assets/fakePor.png" Email="Kate@gmail.com"/>
         <vm:Friend NickName="Bao" Status = "Unreachable" Distance = "???" ImagePath="/Assets/fakePor.png" Email="Bao@gmail.com"/>
     </vm:MainViewModel.Friends>
