--- a/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
@@ -68,6 +68,7 @@
             <TextBox VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginUsernameTextBox" InputScope="EmailSmtpAddress" ></TextBox>
             <PasswordBox  VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginPasswordBox"></PasswordBox>
             <Button VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="LOGINBUTTON" Click="LOGINBUTTON_Click">Login</Button>
+            <ProgressBar Name="progressBar" Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Top" Visibility="Collapsed" IsIndeterminate="True"></ProgressBar>
             <HyperlinkButton VerticalAlignment="Center" Grid.Row="5" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="REGISTERBUTTON" Click="REGISTERBUTTON_Click">Register</HyperlinkButton>
             <!--<HyperlinkButton HorizontalAlignment="Right" VerticalAlignment="Center" Grid.Row="7" Grid.Column="0" Margin="0,0,10,0">Press Here</HyperlinkButton>
             <TextBlock  Grid.Row="7" Grid.Column="1" VerticalAlignment="Center">if not bunny_gg@hotmail.com</TextBlock>-->      
