--- a/WP8Client/GPSWithFriends/GPSWithFriends/RegisterPage.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/RegisterPage.xaml
@@ -68,6 +68,7 @@
             <TextBlock Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Center"  Opacity="0.5">Nick Name</TextBlock>
             <TextBox Grid.Row="3" Name="RegisterNickNameTextBox" VerticalAlignment="Center" Canvas.ZIndex="1" ></TextBox>
             <Button Name="SUBMITBUTTON" Grid.Row="4" Click="Submit_Button_Click" HorizontalAlignment="Center" VerticalAlignment="Center">Submit</Button>
+            <ProgressBar Name="progressBar" Grid.Row="5" Visibility="Collapsed" IsIndeterminate="True"></ProgressBar>
         </Grid>
     </Grid>
 
