--- a/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
+++ b/WP8Client/GPSWithFriends/GPSWithFriends/LoginPage.xaml
@@ -65,7 +65,7 @@
             <!--<TextBlock Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" VerticalAlignment="Bottom">Log in as bunny_gg@hotmail.com</TextBlock>-->
             <TextBlock VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">EMAIL</TextBlock>
             <TextBlock VerticalAlignment="Center" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" HorizontalAlignment="Center" Opacity="0.5">PASSWORD</TextBlock>
-            <TextBox VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginUsernameTextBox" InputScope="EmailSmtpAddress" ></TextBox>
+            <TextBox VerticalAlignment="Center" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginUsernameTextBox" InputScope="EmailSmtpAddress" ToolTipService.ToolTip="&quot;EMAIL&quot;" ></TextBox>
             <PasswordBox  VerticalAlignment="Center" Grid.Row="3" Grid.Column="0"  Grid.ColumnSpan="2"  Canvas.ZIndex="1" Name="LoginPasswordBox"></PasswordBox>
             <Button VerticalAlignment="Center" Grid.Row="4" Grid.Column="0"  Grid.ColumnSpan="2" Width="200" Name="LOGINBUTTON" Click="LOGINBUTTON_Click">Login</Button>
             <ProgressBar Name="progressBar" Grid.Row="4" Grid.ColumnSpan="2" VerticalAlignment="Top" Visibility="Collapsed" IsIndeterminate="True"></ProgressBar>
